--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,12 @@
 
 [tox]
 envlist =
-    {py34,py35,pypy}-dj{18,19,master}
+    {py34,py35,pypy}-dj{19,master}
 
 [testenv]
-commands = python manage.py tests
+commands = python manage.py test
 
 deps =
-    dj18: Django>=1.8,<1.9
     dj19: Django>=1.9,<1.10
     djmaster: https://github.com/django/django/archive/master.tar.gz
+    -rrequirements/test.txt
