Verbose output in Travis tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ envlist =
     {py34,py35,pypy}-dj{19,master}
 
 [testenv]
-commands = python manage.py test
+commands = python manage.py test -v2
 
 deps =
     dj19: Django>=1.9,<1.10
