--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-    {py34,py35,pypy}-dj{19,master}
+    {py34,py35}-dj{19,master}
 
 [testenv]
 commands = python manage.py test -v2
