Fix factories, add test config

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,8 @@ envlist =
 
 [testenv]
 commands = python manage.py test -v2
-
+setenv =
+    DJANGO_SETTINGS_MODULE=config.settings.test
 deps =
     dj19: Django>=1.9,<1.10
     djmaster: https://github.com/django/django/archive/master.tar.gz
