--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "taravel",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "dependencies": {},
+  "scripts": {
+    "install": "bower install"
+  },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-bg-shell": "~2.3.1",
-    "connect-livereload": "~0.3.2",
-    "time-grunt": "~1.2.1",
-    "load-grunt-tasks": "~3.2.0",
-    "grunt-sass": "~1.0.0",
-    "grunt-postcss": "~0.5.5",
-    "cssnano": "~2.1.0",
-    "autoprefixer-core": "~5.2.1",
-    "pixrem": "~1.3.1"
+    "bower": "^1.7.9",
+    "browser-sync": "^2.12.3",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-bower": "0.0.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-load-plugins": "^1.2.2",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.2.0",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.1.1",
+    "yargs": "^4.6.0"
   },
   "engines": {
     "node": ">=0.8.0"
